# bonc

./: .gitignore  CMakeLists.txt  README.md  a.txt  ascon-diff.txt  ascon.out  b.txt  bonc.json  bonc_frontend_output.schema.json  bonc_round1.json  debug.txt  debug4.txt  expr.txt  frontend_result_parser.cpp  gift128.out  gift64.out  nist-lwc-result-temp.txt  out.cnf  output.lp  romulus.out  romulus诡异diff.txt  sat_gift_result.txt  spogent160-dl.txt  spongent160.out  test.lp  xoodoo.out  xoodoo1.out
backend-common/: CMakeLists.txt
backend-common/includes/: perf.h
backend-dp/: CMakeLists.txt
backend-dp/src/: deferred-milp-model.hpp  dp-milp-model.hpp  main.cpp  polyhedron.cpp  polyhedron.h  sbox_modelling.cpp  sbox_modelling.h  traverse-result.hpp  utils.hpp
backend-nm/: CMakeLists.txt
backend-nm/src/: lib.cpp  lib.h  main.cpp
backend-sat/: CMakeLists.txt
backend-sat/src/: cmsat-adapter.hpp  cmsat_adapter.hpp  main.cpp
espresso/: CMakeLists.txt
midend-common/: CMakeLists.txt
midend-common/includes/: anf.h  frontend_result_parser.h  lookup_table.h  read_target.h  ref.h  sbox_and_input.h
midend-common/src/: frontend_result_parser.cpp  lookup_table.cpp  sbox_and_input.cpp
midend-nm/: CMakeLists.txt  main.cpp
midend-nm/src/: lib.cpp  lib.h  main.cpp  monomial_opt.hpp
ppl/: CMakeLists.txt
sat-modeller/: CMakeLists.txt
sat-modeller/includes/: sat-modeller.h  sat_modeller.h  table_template.h
sat-modeller/src/: combinations.hpp  defer.hpp  espresso-wrapper.cpp  espresso-wrapper.h  espresso_wrapper.cpp  espresso_wrapper.h  main.cpp  sat-modeller.cpp  sat_modeller.cpp  table-template.h
test/: CMakeLists.txt  main.cpp
